@@ -1,0 +1,6 @@
+[egg_info]
+tag_build = .dev
+tag_svn_revision = 1
+
+[aliases]
+release = egg_info -RDb ''
