@@ -31,6 +31,11 @@ setup(
     name="cracklib",
     version="@VERSION@",
     description="A CPython extension module wrapping the libcrack library",
+    long_description="""\
+This CPython extension provides Python bindings for cracklib. It
+contains a pythonic interface to cracklib's functions and some Python
+convenience functions.
+""",
     author="Jan Dittberner",
     author_email="jan@dittberner.info",
     url="http://cracklib.sourceforge.net/",
@@ -42,6 +47,7 @@ setup(
         "Development Status :: 4 - Beta",
         "Intended Audience :: Developers",
         "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
+        "Operating System :: OS Independent",
         "Programming Language :: Python",
         "Topic :: Security",
         "Topic :: Software Development :: Libraries :: Python Modules",
