@@ -1,5 +1,7 @@
 v2.8.16 update licensing information in Python extension (Jan Dittberner)
         make translations work in Python extension (Jan Dittberner)
+        fix Python extension compilation warning (Jan Dittberner)
+        add a long description to Python extension (Jan Dittberner)
 v2.8.15 allow building of Python extension outside source folder (Jan Dittberner)
         fix type on Python extension's trove classifier
         reflect license change discussion that was never actually implemented in the repository and update to LGPL
